📦 NEW: Colors Styles    - Added css variables to store colors hex values and also background image url    - Media queries to change the background depending on screen size were also added.    - "light" theme related variables names may change as I think they suck... other than that these styles seems stable.
📦 NEW: Font Styles
   - Added font-face (import typhography Rubik)
   - Created few classes for text styling
      - Note: These classes will change as they have proven useless or not efficient enough to implement.

📦 NEW: Theme Switcher - Theme Switcher Implementation
   - Added switch along with its sun and moon icon
   - Added JS to react to switch changes and change the data-theme attribute in the body tag.

--- a/index.html
+++ b/index.html
@@ -1,48 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Frontend quiz app</title>
-</head>
-<body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./js/script.js" defer></script>
+    <title>Frontend Mentor | Frontend quiz app</title>
+  </head>
+  <body data-theme='light'>
 
-  <!-- Quiz menu start -->
+  <div id="container">
+    <header>
+      <div class="header-content"></div>
+      <!-- theme switcher -->
+      <div class="theme-switcher-container">
+        <div class="switch-sun"></div>
+        <label class="switch">
+          <input type="checkbox" id="theme-switcher">
+          <span class="slider round"></span>
+        </label>
+        <div class="switch-moon"></div>
+      </div>
+    </header>
+    <section id="content">
+      <!-- Welcome Message -->
+      <div></div>
+      <!-- Subject Picker -->
+      <div></div>
+    </section>
+  </div>
 
+
+  </body>
+</html>
+
+
+
+<!-- 
+
+<p class="italic">
   Welcome to the Frontend Quiz!
   Pick a subject to get started.
+</p>
 
   HTML
   CSS
   JavaScript
   Accessibility
 
-  <!-- Quiz menu end -->
+  
+
+
+-->
+
+<!-- Quiz menu end -->
 
   <!-- Quiz question start -->
 
-  Question <!-- number --> of 10
+  <!-- Question <number> of 10
 
   A
   B
   C
   D
 
-  Submit answer
+  Submit answer -->
 
   <!-- Quiz question end -->
 
   <!-- Quiz completed start -->
 
-  Quiz completed
-  You scored...
+  <!-- Quiz completed
+  You scored... -->
 
-  <!-- score --> out of 10
+  <!-- score --> <!-- out of 10 -->
 
   <!-- Quiz completed end -->
-
-</body>
-</html>
